[project]
name = "cds-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.8.0",
    "fastapi>=0.134.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "streamlit>=1.54.0",
]
