[project]
name = "intern-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
]
